updates and fixes

--- a/http/api/categories/config_rest.yaml
+++ b/http/api/categories/config_rest.yaml
@@ -9,10 +9,14 @@ allowedActions:
       sortOrder: name
       relations:
         - children
+        - image
+        - property_groups
   store:
   show:
       relations:
         - children
+        - image
+        - property_groups
   update:
   destroy:
 
